--- a/impl/src/templates/partials/build_script.template
+++ b/impl/src/templates/partials/build_script.template
@@ -33,7 +33,7 @@ genrule(
       ":{{ crate_name_sanitized  }}_build_script",
     ],
     local = 1,
-    cmd = "mkdir -p {{ crate_name_sanitized}}_out_dir_outputs/;"
+    cmd = "mkdir -p $$(dirname $@)/{{ crate_name_sanitized}}_out_dir_outputs/;"
         + " (export CARGO_MANIFEST_DIR=\"$$PWD/$$(dirname $(location :Cargo.toml))\";"
         # TODO(acmcarther): This needs to be revisited as part of the cross compilation story.
         #                   See also: https://github.com/google/cargo-raze/pull/54
@@ -42,7 +42,7 @@ genrule(
         {%- for feature in crate.features %}
         + " export CARGO_FEATURE_{{ feature | upper | replace(from="-", to="_") }}=1;"
         {%- endfor %}
-        + " export OUT_DIR=$$PWD/{{ crate_name_sanitized }}_out_dir_outputs;"
+        + " export OUT_DIR=$$PWD/$$(dirname $@)/{{ crate_name_sanitized }}_out_dir_outputs;"
         + " export BINARY_PATH=\"$$PWD/$(location :{{ crate_name_sanitized }}_build_script)\";"
         + " export OUT_TAR=$$PWD/$@;"
         {%- for environment_variable in crate.raze_settings.buildrs_additional_environment_variables %}
