--- a/impl/src/templates/remote_crates.bzl.template
+++ b/impl/src/templates/remote_crates.bzl.template
@@ -22,7 +22,8 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         remote = "{{crate.source_details.git_data.remote}}",
         commit = "{{crate.source_details.git_data.commit}}",
         build_file = Label("{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.{{workspace.output_buildfile_suffix}}"),
-        init_submodules = True
+        init_submodules = True,
+        {%- include "templates/partials/remote_crates_patch.template" -%}
     )
     {%- else %}
     _new_http_archive(
@@ -33,7 +34,8 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         sha256 = "{{crate.sha256}}",
         {% endif -%}
         strip_prefix = "{{crate.pkg_name}}-{{crate.pkg_version}}",
-        build_file = Label("{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.{{workspace.output_buildfile_suffix}}")
+        {%- include "templates/partials/remote_crates_patch.template" %}
+        build_file = Label("{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.{{workspace.output_buildfile_suffix}}"),
     )
     {%- endif %}
 {% endfor %}
