--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -35,6 +35,7 @@ toml = "0.4.10"
 serde_json = "1.0.34"
 tempdir = "0.3.7"
 semver = { version = "0.9.0", features = ["serde"] }
+derivative = "1.0.3"
 
 [dev-dependencies]
 lazy_static = "1.2.0"
