Allow customizing BUILD files through additional_build_file
This option allows the user to append custom content to the generated
BUILD files. For example, one can use it to include custom Bazel targets
for building non-Rust parts of the crate.

Fixes #58.

--- a/smoke_test/remote/complicated_cargo_library/BUILD
+++ b/smoke_test/remote/complicated_cargo_library/BUILD
@@ -4,6 +4,7 @@ rust_binary(
     name = "complicated_cargo_library",
     srcs = ["src/main.rs"],
     deps = [
+        "//remote/complicated_cargo_library/cargo:libloading",
         "//remote/complicated_cargo_library/cargo:regex",
         "//remote/complicated_cargo_library/cargo:specs",
     ],
