Trim extra whitespace in crates.bzl from the patch template

--- a/impl/src/templates/partials/remote_crates_patch.template
+++ b/impl/src/templates/partials/remote_crates_patch.template
@@ -1,31 +1,31 @@
 {%- if crate.raze_settings.patches %}
-    patches = [
-        {% for patch in crate.raze_settings.patches -%}
-        "{{patch}}",
-        {%- endfor %}
-    ],
+        patches = [
+            {% for patch in crate.raze_settings.patches -%}
+            "{{patch}}",
+            {%- endfor %}
+        ],
 {%- endif %}
 {%- if crate.raze_settings.patch_args %}
-    patch_args = [
-        {% for patch_arg in crate.raze_settings.patch_args -%}
-        "{{patch_arg}}",
-        {%- endfor %}
-    ],
+        patch_args = [
+            {% for patch_arg in crate.raze_settings.patch_args -%}
+            "{{patch_arg}}",
+            {%- endfor %}
+        ],
 {%- endif %}
 {%- if crate.raze_settings.patch_cmds %}
-    patch_cmds = [
-        {% for patch_cmd in crate.raze_settings.patch_cmds -%}
-        "{{patch_cmd}}",
-        {%- endfor %}
-    ],
+        patch_cmds = [
+            {% for patch_cmd in crate.raze_settings.patch_cmds -%}
+            "{{patch_cmd}}",
+            {%- endfor %}
+        ],
 {%- endif %}
 {%- if crate.raze_settings.patch_cmds_win %}
-    patch_cmds_win = [
-        {% for patch_cmd in crate.raze_settings.patch_cmds_win -%}
-        "{{patch_cmd}}",
-        {%- endfor %}
-    ],
+        patch_cmds_win = [
+            {% for patch_cmd in crate.raze_settings.patch_cmds_win -%}
+            "{{patch_cmd}}",
+            {%- endfor %}
+        ],
 {%- endif %}
 {%- if crate.raze_settings.patch_tool %}
-    patch_tool = "{{crate.raze_settings.patch_tool}}",
-{%- endif %}
+        patch_tool = "{{crate.raze_settings.patch_tool}}",
+{%- endif -%}
