--- a/impl/src/templates/remote_crates.bzl.template
+++ b/impl/src/templates/remote_crates.bzl.template
@@ -23,7 +23,7 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         commit = "{{crate.source_details.git_data.commit}}",
         build_file = Label("{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.{{workspace.output_buildfile_suffix}}"),
         init_submodules = True,
-        {%- include "templates/partials/remote_crates_patch.template" -%}
+        {%- include "templates/partials/remote_crates_patch.template" %}
     )
     {%- else %}
     _new_http_archive(
