--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -25,6 +25,13 @@ rust_library(
         "{{flag}}",
         {%- endfor %}
     ],
+    {% if crate.raze_settings.additional_env %}
+    rustc_env = {
+        {% for key, value in crate.raze_settings.additional_env %}
+        "{{key}}": "{{value}}",
+        {% endfor %}
+    },
+    {% endif %}
     {%- if crate.build_script_target %}
     out_dir_tar = ":{{ crate.pkg_name | replace(from="-", to="_")}}_build_script_executor",
     {%- endif %}
