--- a/smoke_test/vendored/complicated_cargo_library/cargo/Cargo.toml
+++ b/smoke_test/vendored/complicated_cargo_library/cargo/Cargo.toml
@@ -29,6 +29,8 @@ additional_flags = [
   # Add an unused flag
   "--cfg=not_used"
 ]
+# Add an unused environment variable
+additional_env = { NOT_USED_KEY = "not_used_value" }
 
 [raze.crates.clang-sys.'0.21.1']
 gen_buildrs = true
