--- a/impl/src/templates/partials/rust_binary.template
+++ b/impl/src/templates/partials/rust_binary.template
@@ -36,4 +36,11 @@ rust_binary(
         "{{feature}}",
         {%- endfor %}
     ],
+    {%- if length(crate.aliased_dependencies) != 0 %}
+    aliases = {
+        {%- for alias in aliased_dependencies %}
+        {{alias}}
+        {%- endfor %}
+    },
+    {%- endif %}
 )
