Final template fix

--- a/impl/src/templates/partials/rust_binary.template
+++ b/impl/src/templates/partials/rust_binary.template
@@ -36,7 +36,7 @@ rust_binary(
         "{{feature}}",
         {%- endfor %}
     ],
-    {%- if crate.aliased_dependencies | length is not 0 %}
+    {%- if crate.aliased_dependencies | length != 0 %}
     aliases = {
         {%- for alias in aliased_dependencies %}
         {{alias}}
