Fix templates and replace hyphens with underscores in renamed package

--- a/impl/src/templates/partials/rust_binary.template
+++ b/impl/src/templates/partials/rust_binary.template
@@ -38,7 +38,7 @@ rust_binary(
     ],
     {%- if crate.aliased_dependencies | length != 0 %}
     aliases = {
-        {%- for alias in aliased_dependencies %}
+        {%- for alias in crate.aliased_dependencies %}
         {{alias}}
         {%- endfor %}
     },
