--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -39,7 +39,7 @@ rust_library(
     ],
     {%- if crate.aliased_dependencies | length != 0 %}
     aliases = {
-        {%- for alias in aliased_dependencies %}
+        {%- for alias in crate.aliased_dependencies %}
         {{alias}}
         {%- endfor %}
     },
