Pull alias strings out to a new struct.

--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -40,7 +40,7 @@ rust_library(
     {%- if crate.aliased_dependencies | length != 0 %}
     aliases = {
         {%- for alias in crate.aliased_dependencies %}
-        {{alias}}
+        "{{alias.target}}": "{{alias.alias}}",
         {%- endfor %}
     },
     {%- endif %}
