--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -8,9 +8,6 @@ alias(
 rust_library(
     name = "{{ target_name_sanitized }}",
     crate_type = "{{ target.kind }}",
-    crate_root = "{{ target.path }}",
-    edition = "{{ target.edition }}",
-    srcs = glob(["**/*.rs"]),
     deps = [
         {%- if crate.build_script_target %}
         ":{{ crate_name_sanitized }}_build_script",
@@ -22,40 +19,5 @@ rust_library(
         "{{dependency}}",
         {%- endfor %}
     ],
-    {%- if crate.proc_macro_dependencies %}
-    proc_macro_deps = [
-    {%- for dependency in crate.proc_macro_dependencies %}
-        "{{dependency.buildable_target}}",
-    {%- endfor %}
-    ],
-    {%- endif %}
-    rustc_flags = [
-        "--cap-lints=allow",
-        {%- for flag in crate.raze_settings.additional_flags %}
-        "{{flag}}",
-        {%- endfor %}
-    ],
-    {%- if crate.raze_settings.additional_env %}
-    rustc_env = {
-        {%- for key, value in crate.raze_settings.additional_env %}
-        "{{key}}": "{{value}}",
-        {%- endfor %}
-    },
-    {%- endif %}
-    {%- if crate.raze_settings.data_attr %}
-    data = {{crate.raze_settings.data_attr}},
-    {%- endif %}
-    version = "{{ crate.pkg_version }}",
-    crate_features = [
-        {%- for feature in crate.features %}
-        "{{feature}}",
-        {%- endfor %}
-    ],
-    {%- if crate.aliased_dependencies | length != 0 %}
-    aliases = {
-        {%- for alias in crate.aliased_dependencies %}
-        "{{alias.target}}": "{{alias.alias}}",
-        {%- endfor %}
-    },
-    {%- endif %}
+{% include "templates/partials/common_attrs.template" %}
 )
