proc_macro_deps is its own attribute (#164)
This allows an unconditional transition to the `exec` config, rather
than needing a conditional transition (which cannot transition to the
`exec` config, only to the `host` config).

Requires rules_rust commit c409198dcc or later.

--- a/impl/src/templates/partials/rust_binary.template
+++ b/impl/src/templates/partials/rust_binary.template
@@ -3,9 +3,6 @@ rust_binary(
     # Prefix bin name to disambiguate from (probable) collision with lib name
     # N.B.: The exact form of this is subject to change.
     name = "cargo_bin_{{ target_name_sanitized }}",
-    crate_root = "{{ target.path }}",
-    edition = "{{ target.edition }}",
-    srcs = glob(["**/*.rs"]),
     deps = [
         {%- if crate.lib_target_name %}
         # Binaries get an implicit dependency on their crate's lib
@@ -21,33 +18,5 @@ rust_binary(
         "{{dependency}}",
         {%- endfor %}
     ],
-    rustc_flags = [
-        "--cap-lints=allow",
-        {%- for flag in crate.raze_settings.additional_flags %}
-        "{{flag}}",
-        {%- endfor %}
-    ],
-    {%- if crate.raze_settings.additional_env %}
-    rustc_env = {
-        {%- for key, value in crate.raze_settings.additional_env %}
-        "{{key}}": "{{value}}",
-        {%- endfor %}
-    },
-    {%- endif %}
-    {%- if crate.raze_settings.data_attr %}
-    data = {{crate.raze_settings.data_attr}},
-    {%- endif %}
-    version = "{{ crate.pkg_version }}",
-    crate_features = [
-        {%- for feature in crate.features %}
-        "{{feature}}",
-        {%- endfor %}
-    ],
-    {%- if crate.aliased_dependencies | length != 0 %}
-    aliases = {
-        {%- for alias in crate.aliased_dependencies %}
-        "{{alias.target}}": "{{alias.alias}}",
-        {%- endfor %}
-    },
-    {%- endif %}
+{% include "templates/partials/common_attrs.template" %}
 )
