Tag all cargo-raze rules with "cargo-raze" tag.
The tags can be used to exclude cargo-raze generated rules from, e.g.
"//...:all" targets. It is useful to prevent Bazel from building
unsupported targets in multiplatform configurations.

--- a/impl/src/templates/partials/build_script.template
+++ b/impl/src/templates/partials/build_script.template
@@ -26,6 +26,7 @@ cargo_build_script(
       {%- endfor %}
     ],
     data = glob(["**"]),
+    tags = ["cargo-raze"],
     version = "{{ crate.pkg_version }}",
     visibility = ["//visibility:private"],
 )
