--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -2,6 +2,7 @@
 alias(
   name = "{{ crate_name_sanitized }}",
   actual = ":{{ target_name_sanitized }}",
+  tags = ["cargo-raze"],
 )
 {%- endif %}
 
