Support additional enviroment variable for build script
Since the switch to the cargo_build_script rule, the
buildrs_additional_environment_variables was no longer working, this
change add this support back.

--- a/impl/src/templates/partials/build_script.template
+++ b/impl/src/templates/partials/build_script.template
@@ -25,6 +25,11 @@ cargo_build_script(
       "{{feature}}",
       {%- endfor %}
     ],
+    build_script_env = {
+        {%- for key, value in crate.raze_settings.buildrs_additional_environment_variables %}	
+        "{{key}}": "{{value}}",
+        {%- endfor %}
+    },
     data = glob(["**"]),
     tags = ["cargo-raze"],
     version = "{{ crate.pkg_version }}",
