--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -30,7 +30,7 @@ cargo_metadata = "0.9.1"
 itertools = "0.8.0"
 slug = "0.1.4"
 tera = "1.0.0"
-semver = "0.9.0"
+semver = { version = "0.9.0", features = ["serde"] }
 serde_derive = "1.0.84"
 serde = "1.0.84"
 toml = "0.4.10"
