--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -26,17 +26,22 @@ anyhow = "1.0.30"
 docopt = "1.0.2"
 cargo-lock = "4.0.1"
 cargo-platform = "0.1.0"
-cargo_metadata = "0.9.1"
+cargo_metadata = "0.10"
 itertools = "0.8.0"
+itertools_new = { version = "0.9.0", package = "itertools" }
 slug = "0.1.4"
 tera = "1.0.0"
-semver = { version = "0.9.0", features = ["serde"] }
 serde_derive = "1.0.84"
 serde = "1.0.84"
 toml = "0.4.10"
 serde_json = "1.0.34"
 tempdir = "0.3.7"
 spdx = "0.3.4"
+derivative = "1.0"
+
+[dependencies.semver]
+features = ["serde"]
+version = "0.10"
 
 [dev-dependencies]
 lazy_static = "1.2.0"
