--- a/smoke_test/remote/cargo_workspace/Cargo.toml
+++ b/smoke_test/remote/cargo_workspace/Cargo.toml
@@ -4,3 +4,10 @@ members = [
     "adder",
     "add-one",
 ]
+
+[raze]
+workspace_path = "//remote/cargo_workspace/cargo"
+target = "x86_64-unknown-linux-gnu"
+gen_workspace_prefix = "cargo_workspace"
+genmode = "Remote"
+output_buildfile_suffix = "BUILD.bazel"
