--- a/examples/remote/complicated_cargo_library/cargo/Cargo.toml
+++ b/examples/remote/complicated_cargo_library/cargo/Cargo.toml
@@ -6,8 +6,11 @@ version = "0.1.0"
 path = "fake_lib.rs"
 
 [dependencies]
-regex = "0.2.5"
-specs = "0.10.0"
+# Newer versions of libloading don't depend on C code anymore, so we're using an older version to
+# test additional_build_file.
+libloading = "=0.5.2"
+regex = "=0.2.5"
+specs = "=0.10.0"
 security-framework-sys = "0.2.2"
 
 [raze]
@@ -15,11 +18,16 @@ workspace_path = "//remote/complicated_cargo_library/cargo"
 target = "x86_64-unknown-linux-gnu"
 gen_workspace_prefix = "complicated_cargo_library"
 genmode = "Remote"
+output_buildfile_suffix = "BUILD.bazel"
 
 [raze.crates.proc-macro2.'0.4.28']
 additional_flags = [
     "--cfg=use_proc_macro",
 ]
+
+[raze.crates.libloading.'0.5.2']
+additional_deps = [":global_static"]
+additional_build_file = "libloading_global_static.BUILD"
 
 [raze.crates.regex.'0.2.5']
 skipped_deps = [
@@ -28,12 +36,14 @@ skipped_deps = [
 ]
 additional_deps = [
   # Add an unused dep
-  "@complicated__specs__0_10_0//:specs"
+  "@complicated_cargo_library__specs__0_10_0//:specs"
 ]
 additional_flags = [
   # Add an unused flag
   "--cfg=not_used"
 ]
+# Add an unused environment variable
+additional_env = { NOT_USED_KEY = "not_used_value" }
 
 [raze.crates.clang-sys.'0.21.1']
 gen_buildrs = true
