--- a/smoke_test/remote/cargo_workspace/adder/Cargo.toml
+++ b/smoke_test/remote/cargo_workspace/adder/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Sam Schlegel <git@lutin.us>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "adder"
+path = "src/main.rs"
 
 [dependencies]
 rand = "0.7"
