--- a/examples/remote/cargo_workspace/add-one/Cargo.toml
+++ b/examples/remote/cargo_workspace/add-one/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
 rand = "0.5"
