Accept `[package.metadata.raze]`, superseding `[raze]`
Cargo sets aside the [`[package.metadata]`][md] namespace for use by
third-party tools like `cargo-raze`. By specifying configuration under
`[package.metadata.raze]` rather than `[raze]`, we avoid an “unused
manifest key: raze” warning on every Cargo command.

This patch teaches `cargo-raze` to accept either `[raze]` or the new
`[package.metadata.raze]`. In case of conflict, it prints a warning and
uses the value of `[package.metadata.raze]`. In the future, we can
remove the `[raze]` key entirely if desired.

Fixes #273.

Changes outside of `impl/` generated by:

```
git ls-files -z ':!impl' | xargs -0 sed -i 's/\[raze/[package.metadata.raze/'
```

[md]: https://doc.rust-lang.org/cargo/reference/manifest.html#the-metadata-table

Test Plan:
With this patch, running `./smoke-test.sh` passes both before and after
updating all the examples with the above `sed` command. Before the `sed`
update, the smoke test prints the deprecation warning, as desired.

wchargin-branch: toml-package-metadata-raze
wchargin-source: 4932fedcc808b17506aadf4b69f6aa78850fe5c6

--- a/examples/remote/binary_dependencies/Cargo.toml
+++ b/examples/remote/binary_dependencies/Cargo.toml
@@ -10,20 +10,20 @@ path = "src/main.rs"
 [dependencies]
 ferris-says = "0.2.0"
 
-[raze]
+[package.metadata.raze]
 workspace_path = "//remote/binary_dependencies/cargo"
 gen_workspace_prefix = "remote_binary_dependencies"
 genmode = "Remote"
 default_gen_buildrs = true
 
-[raze.binary_deps]
+[package.metadata.raze.binary_deps]
 texture-synthesis-cli = "0.8.0"
 
-[raze.crates.texture-synthesis-cli.'0.8.0']
+[package.metadata.raze.crates.texture-synthesis-cli.'0.8.0']
 extra_aliased_targets = ["cargo_bin_texture_synthesis"]
 
-[raze.crates.crossbeam-utils.'0.7.2']
+[package.metadata.raze.crates.crossbeam-utils.'0.7.2']
 gen_buildrs = false
 
-[raze.crates.image.'0.23.0']
+[package.metadata.raze.crates.image.'0.23.0']
 data_attr = "[\"README.md\"]"
