--- a/smoke_test/remote/binary_dependencies/Cargo.toml
+++ b/smoke_test/remote/binary_dependencies/Cargo.toml
@@ -10,20 +10,20 @@ path = "src/main.rs"
 [dependencies]
 ferris-says = "0.2.0"
 
-[raze]
+[package.metadata.raze]
 workspace_path = "//remote/binary_dependencies/cargo"
 gen_workspace_prefix = "remote_binary_dependencies"
 genmode = "Remote"
 default_gen_buildrs = true
 
-[raze.binary_deps]
+[package.metadata.raze.binary_deps]
 texture-synthesis-cli = "0.8.0"
 
-[raze.crates.texture-synthesis-cli.'0.8.0']
+[package.metadata.raze.crates.texture-synthesis-cli.'0.8.0']
 extra_aliased_targets = ["cargo_bin_texture_synthesis"]
 
-[raze.crates.crossbeam-utils.'0.7.2']
+[package.metadata.raze.crates.crossbeam-utils.'0.7.2']
 gen_buildrs = false
 
-[raze.crates.image.'0.23.0']
+[package.metadata.raze.crates.image.'0.23.0']
 data_attr = "[\"README.md\"]"
