--- a/smoke_test/remote/no_deps/Cargo.toml
+++ b/smoke_test/remote/no_deps/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["UebelAndre <github@uebelandre.com>"]
 name = "no_deps"
 path = "src/main.rs"
 
-[raze]
+[package.metadata.raze]
 workspace_path = "//remote/no_deps/cargo"
 genmode = "Remote"
 gen_workspace_prefix = "remote_no_deps"
