--- a/smoke_test/vendored/hello_cargo_library/Cargo.toml
+++ b/smoke_test/vendored/hello_cargo_library/Cargo.toml
@@ -11,7 +11,7 @@ fern = "=0.3.5"
 name = "hello_cargo_library"
 path = "src/main.rs"
 
-[raze]
+[package.metadata.raze]
 workspace_path = "//vendored/hello_cargo_library/cargo"
 target = "x86_64-unknown-linux-gnu"
 output_buildfile_suffix = "BUILD.bazel"
